buildtools/meadow/tests/snapshots/parser__operators_precedence.snap
---
source: tests/parser.rs
expression: "parse_ast(\"def e = 1 + 2 * 3 - 4 / 2 ^ 2\\n\")"
---
Module {
    name: InternedString(test),
    decls: [
        Located {
            value: Bind(
                Pat(
                    Located {
                        value: Var(
                            Located {
                                value: InternedString(e),
                                span: 4..5,
                            },
                        ),
                        span: 4..5,
                    },
                    Located {
                        value: Infix(
                            Located {
                                value: Lit(
                                    Int(
                                        1,
                                    ),
                                ),
                                span: 8..9,
                            },
                            [
                                (
                                    Located {
                                        value: InternedString(+),
                                        span: 10..11,
                                    },
                                    Located {
                                        value: Lit(
                                            Int(
                                                2,
                                            ),
                                        ),
                                        span: 12..13,
                                    },
                                ),
                                (
                                    Located {
                                        value: InternedString(*),
                                        span: 14..15,
                                    },
                                    Located {
                                        value: Lit(
                                            Int(
                                                3,
                                            ),
                                        ),
                                        span: 16..17,
                                    },
                                ),
                                (
                                    Located {
                                        value: InternedString(-),
                                        span: 18..19,
                                    },
                                    Located {
                                        value: Lit(
                                            Int(
                                                4,
                                            ),
                                        ),
                                        span: 20..21,
                                    },
                                ),
                                (
                                    Located {
                                        value: InternedString(/),
                                        span: 22..23,
                                    },
                                    Located {
                                        value: Lit(
                                            Int(
                                                2,
                                            ),
                                        ),
                                        span: 24..25,
                                    },
                                ),
                                (
                                    Located {
                                        value: InternedString(^),
                                        span: 26..27,
                                    },
                                    Located {
                                        value: Lit(
                                            Int(
                                                2,
                                            ),
                                        ),
                                        span: 28..29,
                                    },
                                ),
                            ],
                        ),
                        span: 8..29,
                    },
                ),
            ),
            span: 0..29,
        },
    ],
    attrs: [],
}
