buildtools/meadow/tests/snapshots/parser__use_declaration.snap
---
source: tests/parser.rs
expression: "parse_ast(\"use std.list.map\\n\")"
---
Module {
    name: InternedString(test),
    decls: [
        Located {
            value: Use(
                UseDecl {
                    path: [
                        Located {
                            value: InternedString(std),
                            span: 4..7,
                        },
                        Located {
                            value: InternedString(list),
                            span: 8..12,
                        },
                        Located {
                            value: InternedString(map),
                            span: 13..16,
                        },
                    ],
                    names: [],
                    macros: [],
                    glob: false,
                    alias: None,
                },
            ),
            span: 0..16,
        },
    ],
    attrs: [],
}
